--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "axios": "^1.13.4",
+    "firebase": "^12.8.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
